--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <p>
     sfjskhfdjfhsdfhsfhsdfhkls
     </p>
+
     <img src='kueh lapis.jpg'/>
 
     <ul>
         <li>hello</li>
         <li>world</li>
-        <li>fffff</li>
+        <li><a href='page2.html'>page2</a></li>
+        <li>kdfjkdfj</li>
     </ul>
 </header>
